--- a/SportsStore/SportsStore.WebUI/Web.config
+++ b/SportsStore/SportsStore.WebUI/Web.config
@@ -17,6 +17,8 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="Email.WriteAsFile" value="true"/>
+    <add key="ClientValidationEnabled" value="false"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="false"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
