Sports Store Practise Content is complete, next is the detail in this project

--- a/SportsStore/SportsStore.WebUI/Web.config
+++ b/SportsStore/SportsStore.WebUI/Web.config
@@ -24,6 +24,14 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
     <globalization culture="fr-FR" uiCulture="fr-FR"/>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="secret"/>
+        </credentials>
+      </forms>
+      
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -291,4 +299,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  
 </configuration>
