--- a/SportsStore/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/SportsStore/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -89,7 +89,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminSecurityTests.cs" />
     <Compile Include="AdminTests.cs" />
+    <Compile Include="ImageTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
