--- a/SportsStore/SportsStore.WebUI/bin/SportsStore.WebUI.dll.config
+++ b/SportsStore/SportsStore.WebUI/bin/SportsStore.WebUI.dll.config
@@ -17,11 +17,21 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="Email.WriteAsFile" value="true"/>
+    <add key="ClientValidationEnabled" value="false"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="false"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
     <globalization culture="fr-FR" uiCulture="fr-FR"/>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="secret"/>
+        </credentials>
+      </forms>
+      
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -289,4 +299,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  
 </configuration>
